迁移建造预览与形状状态 / port build previews and shape state