@@ -1,6 +1,6 @@
 package com.rtsbuilding.rtsbuilding.client.screen.shape;
 
-import net.minecraft.core.BlockPos;
+import net.minecraft.util.math.BlockPos;
 
 import java.util.HashSet;
 import java.util.LinkedHashSet;
@@ -19,18 +19,29 @@ public final class ShapeDestroyTargetClassifier {
     private ShapeDestroyTargetClassifier() {
     }
 
-    public record Selection(
-            List<BlockPos> breakableBlocks,
-            List<BlockPos> envelopeBlocks) {
+    public static final class Selection {
+        private final List<BlockPos> breakableBlocks;
+        private final List<BlockPos> envelopeBlocks;
 
-        public Selection {
-            breakableBlocks = immutableDistinct(breakableBlocks);
-            envelopeBlocks = immutableDistinct(envelopeBlocks);
+        public Selection(List<BlockPos> breakableBlocks, List<BlockPos> envelopeBlocks) {
+            this.breakableBlocks = immutableDistinct(breakableBlocks);
+            this.envelopeBlocks = immutableDistinct(envelopeBlocks);
         }
+
+        public List<BlockPos> breakableBlocks() { return this.breakableBlocks; }
+        public List<BlockPos> envelopeBlocks() { return this.envelopeBlocks; }
 
         public boolean isEmpty() {
             return this.breakableBlocks.isEmpty() && this.envelopeBlocks.isEmpty();
         }
+        @Override public boolean equals(Object other) {
+            if (this == other) return true;
+            if (!(other instanceof Selection)) return false;
+            Selection that = (Selection) other;
+            return java.util.Objects.equals(this.breakableBlocks, that.breakableBlocks)
+                    && java.util.Objects.equals(this.envelopeBlocks, that.envelopeBlocks);
+        }
+        @Override public int hashCode() { return java.util.Objects.hash(this.breakableBlocks, this.envelopeBlocks); }
     }
 
     public static Selection classify(
@@ -44,52 +55,52 @@ public final class ShapeDestroyTargetClassifier {
             List<BlockPos> targets,
             Predicate<BlockPos> breakableTarget) {
         if (targets == null || targets.isEmpty()) {
-            return List.of();
+            return java.util.Collections.emptyList();
         }
         Predicate<BlockPos> predicate =
                 breakableTarget == null ? ignored -> true : breakableTarget;
         LinkedHashSet<BlockPos> breakable = new LinkedHashSet<>(targets.size());
         for (BlockPos pos : targets) {
             if (pos != null && predicate.test(pos)) {
-                breakable.add(pos.immutable());
+                breakable.add(pos);
             }
         }
-        return List.copyOf(breakable);
+        return java.util.Collections.unmodifiableList(new java.util.ArrayList<BlockPos>(breakable));
     }
 
     public static List<BlockPos> envelopeTargets(
             List<BlockPos> rawTargets,
             List<BlockPos> breakableTargets) {
         if (rawTargets == null || rawTargets.isEmpty()) {
-            return List.of();
+            return java.util.Collections.emptyList();
         }
         Set<BlockPos> breakable = new HashSet<>();
         if (breakableTargets != null) {
             for (BlockPos pos : breakableTargets) {
                 if (pos != null) {
-                    breakable.add(pos.immutable());
+                    breakable.add(pos);
                 }
             }
         }
         LinkedHashSet<BlockPos> envelope = new LinkedHashSet<>(rawTargets.size());
         for (BlockPos pos : rawTargets) {
             if (pos != null && !breakable.contains(pos)) {
-                envelope.add(pos.immutable());
+                envelope.add(pos);
             }
         }
-        return List.copyOf(envelope);
+        return java.util.Collections.unmodifiableList(new java.util.ArrayList<BlockPos>(envelope));
     }
 
     private static List<BlockPos> immutableDistinct(List<BlockPos> positions) {
         if (positions == null || positions.isEmpty()) {
-            return List.of();
+            return java.util.Collections.emptyList();
         }
         LinkedHashSet<BlockPos> distinct = new LinkedHashSet<>(positions.size());
         for (BlockPos pos : positions) {
             if (pos != null) {
-                distinct.add(pos.immutable());
+                distinct.add(pos);
             }
         }
-        return List.copyOf(distinct);
+        return java.util.Collections.unmodifiableList(new java.util.ArrayList<BlockPos>(distinct));
     }
 }
