@@ -3,7 +3,7 @@ package com.rtsbuilding.rtsbuilding.client.screen.shape;
 import com.rtsbuilding.rtsbuilding.client.screen.culling.RtsCullingBox;
 import com.rtsbuilding.rtsbuilding.client.screen.quickbuild.BuildShape;
 import com.rtsbuilding.rtsbuilding.common.shape.model.ShapeFillMode;
-import net.minecraft.core.BlockPos;
+import net.minecraft.util.math.BlockPos;
 
 import java.util.List;
 
@@ -19,7 +19,7 @@ import java.util.List;
  */
 public final class ShapeGenerationPlanCache {
     private Key cachedKey;
-    private List<BlockPos> cachedPositions = List.of();
+    private List<BlockPos> cachedPositions = java.util.Collections.emptyList();
     private RtsCullingBox cachedBounds;
 
     /**
@@ -32,18 +32,46 @@ public final class ShapeGenerationPlanCache {
      * @param rangeLimits       范围破坏限制
      * @param buildMaxDimension 普通范围建造的单轴上限
      */
-    public record Request(
-            ShapeBuildTypes.Input input,
-            ShapeFillMode fillMode,
-            RtsCullingBox advancedBox,
-            boolean rangeDestroy,
-            RangeDestroySelectionLimiter.Limits rangeLimits,
-            int buildMaxDimension) {
+    public static final class Request {
+        private final ShapeBuildTypes.Input input;
+        private final ShapeFillMode fillMode;
+        private final RtsCullingBox advancedBox;
+        private final boolean rangeDestroy;
+        private final RangeDestroySelectionLimiter.Limits rangeLimits;
+        private final int buildMaxDimension;
+
+        public Request(ShapeBuildTypes.Input input, ShapeFillMode fillMode, RtsCullingBox advancedBox,
+                boolean rangeDestroy, RangeDestroySelectionLimiter.Limits rangeLimits, int buildMaxDimension) {
+            this.input = input;
+            this.fillMode = fillMode;
+            this.advancedBox = advancedBox;
+            this.rangeDestroy = rangeDestroy;
+            this.rangeLimits = rangeLimits;
+            this.buildMaxDimension = buildMaxDimension;
+        }
+
+        public ShapeBuildTypes.Input input() { return this.input; }
+        public ShapeFillMode fillMode() { return this.fillMode; }
+        public RtsCullingBox advancedBox() { return this.advancedBox; }
+        public boolean rangeDestroy() { return this.rangeDestroy; }
+        public RangeDestroySelectionLimiter.Limits rangeLimits() { return this.rangeLimits; }
+        public int buildMaxDimension() { return this.buildMaxDimension; }
+        @Override public boolean equals(Object other) {
+            if (this == other) return true;
+            if (!(other instanceof Request)) return false;
+            Request that = (Request) other;
+            return this.rangeDestroy == that.rangeDestroy && this.buildMaxDimension == that.buildMaxDimension
+                    && java.util.Objects.equals(this.input, that.input) && this.fillMode == that.fillMode
+                    && java.util.Objects.equals(this.advancedBox, that.advancedBox)
+                    && java.util.Objects.equals(this.rangeLimits, that.rangeLimits);
+        }
+        @Override public int hashCode() { return java.util.Objects.hash(this.input, this.fillMode,
+                this.advancedBox, this.rangeDestroy, this.rangeLimits, this.buildMaxDimension); }
     }
 
     public List<BlockPos> positions(Request request) {
         if (request == null || request.input() == null) {
-            return List.of();
+            return java.util.Collections.emptyList();
         }
 
         ShapeFillMode fillMode =
@@ -108,7 +136,7 @@ public final class ShapeGenerationPlanCache {
         }
 
         this.cachedKey = key;
-        this.cachedPositions = List.copyOf(positions);
+        this.cachedPositions = java.util.Collections.unmodifiableList(new java.util.ArrayList<>(positions));
         this.cachedBounds = boundsOf(this.cachedPositions);
         return this.cachedPositions;
     }
@@ -119,7 +147,7 @@ public final class ShapeGenerationPlanCache {
 
     public void clear() {
         this.cachedKey = null;
-        this.cachedPositions = List.of();
+        this.cachedPositions = java.util.Collections.emptyList();
         this.cachedBounds = null;
     }
 
@@ -165,14 +193,41 @@ public final class ShapeGenerationPlanCache {
         return cube > Integer.MAX_VALUE ? Integer.MAX_VALUE : (int) cube;
     }
 
-    private record Key(
-            ShapeBuildTypes.Input input,
-            ShapeFillMode fillMode,
-            RtsCullingBox advancedBox,
-            boolean rangeDestroy,
-            int maxWidth,
-            int maxHeight,
-            int maxDepth,
-            int maxVolume) {
+    private static final class Key {
+        private final ShapeBuildTypes.Input input;
+        private final ShapeFillMode fillMode;
+        private final RtsCullingBox advancedBox;
+        private final boolean rangeDestroy;
+        private final int maxWidth;
+        private final int maxHeight;
+        private final int maxDepth;
+        private final int maxVolume;
+
+        private Key(ShapeBuildTypes.Input input, ShapeFillMode fillMode, RtsCullingBox advancedBox,
+                boolean rangeDestroy, int maxWidth, int maxHeight, int maxDepth, int maxVolume) {
+            this.input = input;
+            this.fillMode = fillMode;
+            this.advancedBox = advancedBox;
+            this.rangeDestroy = rangeDestroy;
+            this.maxWidth = maxWidth;
+            this.maxHeight = maxHeight;
+            this.maxDepth = maxDepth;
+            this.maxVolume = maxVolume;
+        }
+
+        @Override public boolean equals(Object other) {
+            if (this == other) return true;
+            if (!(other instanceof Key)) return false;
+            Key that = (Key) other;
+            return this.rangeDestroy == that.rangeDestroy && this.maxWidth == that.maxWidth
+                    && this.maxHeight == that.maxHeight && this.maxDepth == that.maxDepth
+                    && this.maxVolume == that.maxVolume && java.util.Objects.equals(this.input, that.input)
+                    && this.fillMode == that.fillMode && java.util.Objects.equals(this.advancedBox, that.advancedBox);
+        }
+
+        @Override public int hashCode() {
+            return java.util.Objects.hash(this.input, this.fillMode, this.advancedBox,
+                    this.rangeDestroy, this.maxWidth, this.maxHeight, this.maxDepth, this.maxVolume);
+        }
     }
 }
